date filter styling, 'events' changed to 'projects'

--- a/assets/sass/calendar.scss
+++ b/assets/sass/calendar.scss
@@ -19,7 +19,7 @@
     word-spacing: 3px;
 }
 
-.event-calendar {
+.project-calendar {
     display: block;
     position: relative;
     top: -35px;
