--- a/layouts/artists/list.html
+++ b/layouts/artists/list.html
@@ -7,8 +7,7 @@
 <div class="listings">
     <div class="flex-wrapper">
         <section class="list_intro">{{.Content}}</section>
-        <section class="list_block date-filter">{{partial "date-filter" .}}</section>
-
+        <section class="list_block block_date-filter">{{partial "date-filter" .}}</section>
         {{partial "artist_listings" . }}
 
     </div>
