--- a/layouts/partials/calendar.html
+++ b/layouts/partials/calendar.html
@@ -1,4 +1,4 @@
-<div class="event-calendar">
+<div class="project-calendar">
 
 <div class="calendar_month">{{dateFormat "January 2006" now}}</div>
 
