--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -3,7 +3,7 @@
     <div class="header_nav_menu-item"><a href="/artists">artists</a></div>
 
     <img class="header_nav_divider" src="/images/slash.svg">
-    <div class="header_nav_menu-item"><a href="/events">projects</a></div>
+    <div class="header_nav_menu-item"><a href="/projects">projects</a></div>
 
     <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">support us
