--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -1,5 +1,5 @@
 {{ define "main"}}
-<!-- EVENTS - LIST TEMPLATE -->
+<!-- PROJECTS - LIST TEMPLATE -->
 <!-- Nav, Social, and Header pic are in baseof -->
 
 <h1 class="subhead_type">{{.Params.listType}}</h1>
@@ -7,11 +7,12 @@
 <div class="listings">
     <div class="flex-wrapper">
         <section class="list_intro">{{.Content}}</section>
-        <section class="list_block date-filter">{{partial "date-filter" .}}</section>
+        <section class="list_block block_date-filter">{{partial "date-filter" .}}</section>
 
-        {{partial "event_listings" . }}
+        {{partial "project_listings" . }}
 
     </div>
+
 </div>
 
 {{end}}
