--- a/assets/sass/date-filter.scss
+++ b/assets/sass/date-filter.scss
@@ -1,82 +1,110 @@
-.date-filter {
-    width: 30%;
+.block_date-filter {
+    width: 29%;
 
-    form {
-        width: 100%;
+    .date-filter {
 
         p {
-            text-align: center;
+            width: 100%;
             font-size: 17px;
-            margin: 0 0 12px 0;
+            margin: 0 0 15px 0;
             color: #004B80;
+            text-align: center;
         }
+    }
+
+    .date-filter_flex-wrapper {
+        margin: 0 auto;
+        width: 100%; 
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     .year-select {
         background: #A3A09C;
         text-align: center;
         border: none;
-        margin-left: 10px;
-        height: 27px;
-        width: 100px;
+        margin: 7px 5px;
+        height: 30px;
+        width: 110px;
         box-shadow: inset 1px 2px 10px #77736e;
         color: #fff;
         font-weight: 700;
-        padding-bottom: 2px;
+        padding-top: 5px;
         font-size: 18px;
         text-transform: uppercase;
-        text-shadow: 1px 2px 10px #77736e;
+        text-shadow: 1px 2px 5px #363330;
+        display: inline-block;
+        position: relative;
     }
 
-    .year-select::placeholder {
-        color: #fff;
-        font-weight: 700;
-        font-size: 19px;
+    .quarters {
+        align-self: flex-end;
+        opacity: 0;
+        width: 110px;
+        margin-top: 2px;
+        padding-top: 30px;
+        position: absolute;
+        top: 0;
 
-        &:active {
+        .opacifier {
+            background: #fff;
+        }
+
+        p {
             color: #fff;
+            font-weight: 600;
+            font-size: 15px;
+            background: #b6b3af;
+            height: 28px;
+            border: solid 1px #fff;
+            margin: 3px 0;
+            padding-top: 4px;
+            text-shadow: 1px 1px 5px #1b1a18;
+            border-bottom: solid 1px #77736e;
+        }
+
+        &:hover {
+            opacity: 1;
+            z-index: 100;
         }
     }
-
-    input::-webkit-calendar-picker-indicator {
-        display: none;
-    }
-
 }
 
-
-
-datalist option {
-    background: pink;
-    text-transform: lowercase;
-}
-
-
-.filter-buttons {
-    margin: 10px;
-    padding: 0 0 2px 0;
-    display: block;
-    border: none;
-    font-weight: 600;
-    font-size: 17px;
-    cursor: pointer;
-    background: #004B80;
-    color: #fff;
-    height: 27px;
-    width: 100px;
-        
-    &:first-of-type {
-        margin-top: 20px;
-    }
-}
-
-.year-select, .filter-buttons {
+.year-select, .filter-buttons, .quarters p {
     &:active, &:hover, &:focus {
         background: #E6AC5C;
         box-shadow: none;
         cursor: pointer;
-        color: #fff;
         text-shadow: none;
     }
 }
+
+.year-select {
+    &:active, &:hover, &:focus {
+        background: #004B80;
+    }
+}
+
+
+
+.filter-button {
+    margin: 20px 0 0 -10px;
+    padding: 2px 0;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 16px;
+    cursor: pointer;
+    background: #004B80;
+    color: #fff;
+    height: 27px;
+    width: 85px;
+    text-align: center;
+    position: relative;
+    // left: 65%;
+    left: 100%;
+}
+
+
 
