--- a/assets/sass/previews.scss
+++ b/assets/sass/previews.scss
@@ -1,28 +1,29 @@
 /* ===== EVENT PREVIEW LIST SECTION ===== */
 
-.events_list {
+.projects_list {
     grid-area: sidebar;
 }
 
-.events_preview {
+.projects_preview {
     font-size: 16px;
     clear: both;
     overflow: hidden;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     border-bottom: solid 1px #666;
 }
 
-.events_preview:last-of-type {
+.projects_preview:last-of-type {
     border: none;
 }
 
 .preview_link-more {
     float: right;
-    margin: 5px 10% 25px 0;
+    // margin: 5px 10% 25px 0;
+    margin: 0 10% 25px 0;
     font-size: 15px;
 }
 
-.events_thumbnail {
+.projects_thumbnail {
     width: 30%;
     min-width: 75px;
     height: auto;
@@ -30,17 +31,17 @@
     margin: 0 15px 15px 0;
 }
 
-.events_event-title {
+.projects_project-title {
     font-size: 20px;
 }
 
-.events_preview_date {
+.projects_preview_date {
     font-weight: 600;
     margin: 15px 0 10px 0;
 }
 
-.events_preview_location,
-.events_preview_address {
+.projects_preview_location,
+.projects_preview_address {
     margin: 5px 0;
 }
 
