--- a/assets/sass/single-page.scss
+++ b/assets/sass/single-page.scss
@@ -26,7 +26,7 @@
     background-size: 100%;
     background-repeat: no-repeat;
 
-    &.events {
+    &.projects {
         background-image: url("/images/SzymonKaliski.png");
         background-position-y: 80%; //specific to current picture
     }
@@ -60,7 +60,7 @@
 }
 
 
-.event-info {
+.project-info {
     margin-top: 30px;
     font-size: 18px;
 
@@ -70,13 +70,13 @@
     }
 }
 
-.event_date {
+.project_date {
     font-weight: 700;
     font-size: 20px;
     line-height: 1.3;
 }
 
-.event_address {
+.project_address {
     font-size: 18px;
     margin: -12px 0 30px 0;
 }
@@ -121,7 +121,7 @@
         line-height: 24px;
     }
 
-    .event-pic {
+    .project-pic {
         margin: 30px 25px 40px 0;
         float: left;
         max-height: 500px;
