basic filter js, list pages restructured to target filter groupings

--- a/assets/sass/list-page.scss
+++ b/assets/sass/list-page.scss
@@ -45,7 +45,7 @@
 .flex-wrapper {
     margin: 0 auto;
     width: 100%; 
-    grid-area: flex-wrapper;
+    // grid-area: flex-wrapper;
     display: flex;
     flex-flow: row wrap;
     align-items: stretch;
@@ -53,6 +53,7 @@
 }
 
 .list_block {
+    flex-basis: auto;
     width: 31%;
     margin: 10px;
 }
