--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -32,6 +32,7 @@
         {{ partial "to-top" .}}
         
         <script src="/js/scrollToTop.js" async defer></script>
+        <script src="/js/dateFilter.js" async defer></script>
 </body>
 
 </html>
