--- a/layouts/partials/artist_listings.html
+++ b/layouts/partials/artist_listings.html
@@ -1,30 +1,38 @@
 
-
 {{ range (where .Site.Pages ".Params.type" "artists").GroupByDate "January 2006"}}
 
-{{$year := substr .Key (sub (len .Key) 4) 4}}
+        {{$year := substr .Key (sub (len .Key) 4) 4}}
 
+        {{ $.Scratch.Set "season" ""}}
 
         {{if (in .Key  "March")}}
-        <h1 class="subhead_date">SPRING {{$year}}</h1>
+                {{ $.Scratch.Set "season" "Spring"}}
         {{else if (in .Key  "June")}}
-        <h1 class="subhead_date">SUMMER {{$year}}</h1>
+                {{ $.Scratch.Set "season" "Summer"}}
         {{else if (in .Key  "September")}}
-        <h1 class="subhead_date">Fall {{$year}}</h1>
+                {{ $.Scratch.Set "season" "Fall"}}
         {{else if (in .Key  "December")}}
-        <h1 class="subhead_date">Winter {{$year}}</h1>
+                {{ $.Scratch.Set "season" "Winter"}}        
         {{end}}
 
-        {{ range where .Pages "Type" "artists"}}
-                <section class="list_block artist-listing">
-                        <h2 class="artist-name"><a href="{{.URL}}">{{.Params.name}}</h2></a>
-                        <img class="artist-pic" src={{.Params.picture}}>
-                        <p class="list-page_summary">{{.Summary | truncate 200 }}</p>
-                        <a class="preview_link-more" href="{{.URL}}">more</a>
-                </section>
-        {{end}}
+        {{$season := $.Scratch.Get "season"}}
 
+        <div class="{{$season}}{{$year}} filter-item"> 
+                
+                <div class="flex-wrapper">
+                <h1 class="subhead_date ">{{$season}} {{$year}}</h1>
 
+                {{ range where .Pages "Type" "artists"}}
+                        <section class="list_block artist-listing">
+                                <h2 class="artist-name"><a href="{{.URL}}">{{.Params.name}}</h2></a>
+                                <img class="artist-pic" src={{.Params.picture}}>
+                                <p class="list-page_summary">{{.Summary | truncate 200 }}</p>
+                                <a class="preview_link-more" href="{{.URL}}">more</a>
+                        </section>
+                {{end}}
+
+                </div>
+        </div>
 
 
 {{ end }}
