update nav paths

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -21,7 +21,7 @@
         <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
             <div class="subnav_menu-item"><a href="/residency">info for artists</a></div>
-            <div class="subnav_menu-item"><a href="/residency/apply">how to apply</a></div>
+            <div class="subnav_menu-item"><a href="/residency/how-to-apply">how to apply</a></div>
         </div>
     </div>
 </nav>
