project preview list can be set by date and quantity

--- a/layouts/partials/artist_listings.html
+++ b/layouts/partials/artist_listings.html
@@ -1,4 +1,6 @@
 
+<!-- FORMATS ARTIST PREVIEWS FOR LIST PAGE -->
+
 {{ range (where .Site.Pages ".Params.type" "artists").GroupByDate "January 2006"}}
 
         {{$year := substr .Key (sub (len .Key) 4) 4}}
