--- a/layouts/partials/project_listings.html
+++ b/layouts/partials/project_listings.html
@@ -1,7 +1,7 @@
 
+<!-- FORMATS PROJECT PREVIEWS FOR LIST PAGE -->
+
 {{ range (where .Site.Pages ".Params.type" "projects").GroupByDate "January 2006" }}
-
-
 
 {{ $projectDate := replace .Key " " ""}}
 
@@ -11,7 +11,6 @@
         <h1 class="subhead_date">{{.Key}}</h1>
 
         {{ range where .Pages "Type" "projects"}}
-
                 <section class="list_block project-listing">
                         {{partial "project_preview" .}}
                 </section>
@@ -19,6 +18,5 @@
 
         </div>
 </div>
-
 
 {{ end }}
