triangle added to social, list page sort by artist name & project date

--- a/assets/sass/list-page.scss
+++ b/assets/sass/list-page.scss
@@ -100,8 +100,7 @@
 .artist-pic {
     max-width: 95%;
     margin-bottom: 10px;
-}
-    
+} 
 
 
 .artist-name {
@@ -114,8 +113,7 @@
     display: inline-block;
     font-size: 17px;
     line-height: 1.4;
-    margin-top: 10px;
-    margin-bottom: 15px;
+    margin: 10px 0;
     width: 95%;
 }
 
