--- a/layouts/contributors/single.html
+++ b/layouts/contributors/single.html
@@ -3,7 +3,7 @@
 <!-- CONTRIBUTORS PAGE (Design based on Single template, functions as List-->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-<section class="preview_list">        
+<section class="sidebar-previews">        
 
         <h1>Become a Contributor</h1>
 
