--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -2,7 +2,7 @@
 <!-- PROJECTS - SINGLE TEMPLATE -->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-    <section class="preview_list projects_list">
+    <section class="sidebar-previews projects_list">
 
         <h1>Upcoming Projects</h1>
 
@@ -33,7 +33,7 @@
         <p class="project_venue">{{.Params.venue}}</p>
         <p class="project_address">{{.Params.address}}</p>
         <a class="facebook-link" href="{{.Params.facebook}}" target="_blank">Facebook project</a>
-
+       
         <a class="artist-bio" href="/artists/{{.Params.artist | urlize }}">artist bio</a></p>
 
         {{if .Params.artistwebsite}}
