--- a/layouts/support/single.html
+++ b/layouts/support/single.html
@@ -3,7 +3,7 @@
 <!-- SUPPORT SINGLE PAGE -->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-    <section class="preview_list">        
+    <section class="sidebar-previews">        
 
         <h1>Volunteer info</h1>
         
