--- a/assets/sass/residency.scss
+++ b/assets/sass/residency.scss
@@ -1,9 +1,9 @@
 .residency_menu {
 
-    h1 {
-        font-size: 24px;
-        margin-top: 35px;
-    }
+    // h1 {
+    //     font-size: 24px;
+    //     margin-top: 35px;
+    // }
 
     p {
         font-size: 18px;
@@ -20,7 +20,7 @@
     img {
         // max-width: 425px;
         width: 100%;
-        margin-top: 30px;
+        margin-top: 15px;
     }
 }
 
