--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,14 +28,14 @@
                 </div>
             </header>         
 
-            <section class="preview_list projects_list">
+            <section class="sidebar-previews projects_list">
 
                     <h1>Upcoming Projects</h1>
                     {{ $.Scratch.Set "previewCount" 0}}
                 
                     {{range sort (where (where .Site.Pages "Params.type" "projects") ".Params.date" "!=" nil) ".Params.date" }}
                 
-                    <!-- change 2018-01-01 to now for current date (now) OR make variable that can be edited -->
+                    <!-- change 2018-01-01 to now for current date as cutoff OR make variable that can be edited -->
                     {{$cutoffDate := time "2018-08-01"}}
                     {{$projectDate := time .Params.date}}
                 
