--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,5 +1,7 @@
 <div class="social-links">
-    <a href="https://www.facebook.com/LaboratorySpokane/" target="_blank;"><img src="/images/facebook_icon.jpg" alt="facebook icon"></a>
-    <a href="https://www.youtube.com/channel/UCbNlQuOvWG4tCgpqwuIfnhg" target="_blank;"><img src="/images/youtube_icon.jpg" alt="youtube icon"></a>
-    <a><img src="/images/email_news.jpg" alt="sign up for email"></a>
+    <a href="https://www.facebook.com/LaboratorySpokane/" target="_blank;"><img src="/images/facebook_icon.svg" alt="facebook icon"></a>
+    <a href="https://www.youtube.com/channel/UCbNlQuOvWG4tCgpqwuIfnhg" target="_blank;"><img src="/images/instagram_icon.svg" alt="instagram icon"></a>
+    <a><img src="/images/email_news.svg" alt="sign up for email"></a>
+    <div class="triangle"></div>
 </div>
+
