instagram icon and link

--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,6 +1,6 @@
 <div class="social-links">
     <a href="https://www.facebook.com/LaboratorySpokane/" target="_blank;"><img src="/images/facebook_icon.svg" alt="facebook icon"></a>
-    <a href="https://www.youtube.com/channel/UCbNlQuOvWG4tCgpqwuIfnhg" target="_blank;"><img src="/images/instagram_icon.svg" alt="instagram icon"></a>
+    <a href="https://www.instagram.com/explore/locations/955861149/laboratory/?hl=en" target="_blank;"><img src="/images/instagram_icon.svg" alt="instagram icon"></a>
     <a><img src="/images/email_news.svg" alt="sign up for email"></a>
     <div class="triangle"></div>
 </div>
