--- a/layouts/partials/date-filter.html
+++ b/layouts/partials/date-filter.html
@@ -18,5 +18,6 @@
 
         </div>
 
-        <div class="filter-button">clear filter</div>
+        <div class="filter-button" id="clear-button">clear filter</div>
+        <div class="results-status" id="results-status">no results found</div>
 </div>
