--- a/assets/sass/date-filter.scss
+++ b/assets/sass/date-filter.scss
@@ -31,7 +31,7 @@
         border: none;
         margin: 7px 5px;
         height: 30px;
-        width: 110px;
+        width: 125px;
         box-shadow: inset 1px 2px 10px #77736e;
         color: #fff;
         font-weight: 700;
@@ -46,7 +46,7 @@
     .quarters {
         align-self: flex-end;
         opacity: 0;
-        width: 110px;
+        width: 125px;
         margin-top: 2px;
         padding-top: 30px;
         position: absolute;
@@ -111,19 +111,15 @@
     width: 85px;
     text-align: center;
     position: relative;
-    // left: 100%;
     left: 95%;
 }
 
 .results-status {
     display: none;
-    // opacity: 0;
     font-size: 20px;
     font-weight: 700;
-    color: orange;
+    color: #E6AC5C;
     text-align: center;
     margin-top: -26px;
+    width: 85%;
 }
-
-
-
