contribute page content - unstyled

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -65,8 +65,8 @@
             </section>
 
             <section class="calendar-section">
-                <!-- <figure class="project-calendar"></figure> -->
-                {{ partial "calendar" }}
+                <!-- {{ partial "calendar" }} -->
+                <h3><a href="/projects">See more projects and events</a></h3>
             </section>
 
             <section class="info">
