--- a/layouts/partials/date-filter.html
+++ b/layouts/partials/date-filter.html
@@ -2,7 +2,7 @@
         <p>Select a time period to filter {{.Type | singularize}} listings:</p>
         <div class="date-filter_flex-wrapper">           
 
-                {{ range (where .Pages ".Params.type" "projects").GroupByDate "2006" }}
+                {{ range .Pages.GroupByDate "2006" }}
 
                 {{$nextYear := add (int (substr .Key (sub (len .Key) 2) 2)) 1}}
 
