--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -9,10 +9,9 @@
     <div class="header_nav_menu-item">support us
         <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
-            <div class="subnav_menu-item"><a href="/support">contribute</a></div>
-            <div class="subnav_menu-item"><a href="/support">volunteer</a></div>
-            <div class="subnav_menu-item"><a href="/support">donate space</a></div>
-            <div class="subnav_menu-item"><a href="/contributors">our supporters</a></div>
+            <div class="subnav_menu-item"><a href="/contribute">contribute</a></div>
+            <div class="subnav_menu-item"><a href="/contribute">volunteer</a></div>
+            <div class="subnav_menu-item"><a href="/supporters">our supporters</a></div>
         </div>
     </div>
 
