--- a/assets/sass/residency.scss
+++ b/assets/sass/residency.scss
@@ -45,9 +45,9 @@
         color: #00406D;
     }
     
-    p {
-        margin: 15px 0 0 0;
-    }
+    // p {
+    //     margin: 15px 0 0 0;
+    // }
 
     ol {
         padding-left: 15px;
