--- a/assets/sass/single-page.scss
+++ b/assets/sass/single-page.scss
@@ -5,7 +5,6 @@
     grid-template-areas:
         "header header"
         "primary sidebar";
-    // border: solid 1px salmon;
 }
 
 // /* ===== APPLIES TO SINGLE AND LIST -- MOVE? ===== */
@@ -158,7 +157,8 @@
     max-height: 100px;
     -webkit-vertical-align: middle;
     vertical-align: middle;
-    margin: 10px 25px 0 0;
+    margin: 0 25px 0 10px;
+    background: #fff;
 }
 
 .donor-name {
