--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -15,7 +15,7 @@
         <h2>(default list page)</h2>
 
         <div class="copy-primary_content">{{.Content}}</div>
-      
+        <div class="triangle triangle-corner"></div>
         
     </section>
     
