--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,6 +15,7 @@
         <h2>(default single page)</h2>
 
         <div class="copy-primary_content">{{.Content}}</div>
+        <div class="triangle triangle-corner"></div>
         
     </section>
     
