--- a/layouts/contribute/list.html
+++ b/layouts/contribute/list.html
@@ -19,10 +19,9 @@
 </section>
 
 <section class="copy-primary support">
+<div class="triangle triangle-corner"></div>
     
     <h1>{{.Params.title}}</h1>
-
-
 
     {{range where .Site.Pages ".Params.section" "primary"}}
 
