--- a/layouts/partials/residency.html
+++ b/layouts/partials/residency.html
@@ -19,6 +19,7 @@
 
     <h1>{{.Params.title}}</h1>
     <div class="copy-primary_content residency-copy">{{.Content}}</div>
+    <div class="triangle triangle-corner"></div>
 
 
 </section>
