--- a/layouts/supporters/list.html
+++ b/layouts/supporters/list.html
@@ -18,6 +18,7 @@
 </section>
 
 <section class="copy-primary">
+    <div class="triangle triangle-corner"></div>
     
     <h1>Thank you to Our Sponsors</h1>
 
