--- a/assets/sass/single-page.scss
+++ b/assets/sass/single-page.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .grid-single {
     grid-template-columns: 60% auto;
     grid-template-rows: auto;
@@ -112,7 +114,6 @@
 
 // /* ========== */
 
-
 .copy-primary {
     h2 {
         font-size: 28px;
@@ -148,6 +149,26 @@
         margin-top: 20px;
     }
 
+}
+
+.artists {
+    h1 {
+        display: inline-block;
+    }
+}
+
+.artist-quarter {
+    height: 30px;
+    background: $orange;
+    color: #fff;
+    font-weight: 700;
+    display: inline-block;
+    font-size: 20px;
+    padding: 2px 15px 0 14px;
+    margin-left: 20px;
+    position: relative;
+    top: -3px;
+    text-transform: uppercase;
 }
 
 // ===== CONTRIBUTOR PAGES =====
