--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,6 +48,7 @@
             </section>
 
             <section class="copy-primary">
+            <div class="triangle triangle-corner"></div>
                 <h1 class="copy-primary_h1">What We Do</h1>
                 <div class="copy-primary_content">
                     <p>Tempor laboris in dolore Lorem excepteur ipsum consectetur. Non nostrud incididunt commodo dolor
