button tags in donate forms

--- a/layouts/partials/donate-form_one-time.html
+++ b/layouts/partials/donate-form_one-time.html
@@ -1,10 +1,10 @@
 <div class="donate_form">
         <form class="one-time">
-            <div>$&#8202;10</div>
-            <div>&#8202;$25</div>
-            <div class="donate-focus">&#8202;$50</div>
-            <div>&#8202;$100</div>
+            <button class="donate-amount">$&#8202;10</button>
+            <button class="donate-amount">&#8202;$25</button>
+            <button class="donate-amount donate-focus">&#8202;$50</button>
+            <button class="donate-amount">&#8202;$100</button>
             <div class="dollar-sign">&#8202;$</div><input placeholder="other one-time amount"> 
-            <button>pay with card</button>                                              
+            <button type="submit">pay with card</button>                                              
         </form> 
-</div>
+    </div>
