--- a/assets/sass/support.scss
+++ b/assets/sass/support.scss
@@ -41,17 +41,18 @@
             width: 250px;
         }
 
-        div {
+        .donate-amount, .dollar-sign {
             margin-top: 7px;
             width: 100%;  
             height: 40px;
             background: #A3A09C;
             color: #fff;
             font-weight: 600;
-            padding: 5px 0 0 12px;
+            padding-left: 12px;
             font-size: 20px;
             border: solid 1px #fff;
             box-shadow: 0 2px 10px #ceccca;
+            text-align: left;
 
             &:hover,
             &:active,
@@ -76,7 +77,7 @@
             display: inline-block;
             width: 30px;
             height: 38px;
-            padding-left: 0;
+            padding: 5px 0 0 0;
             text-align: center;
             box-shadow: none;
             position: relative;
@@ -97,7 +98,7 @@
             }
         }
 
-        button {
+        button[type="submit"] {
             margin-top: 20px;
             float: right;
             background: $darkblue;
@@ -107,7 +108,7 @@
             text-transform: uppercase;
             font-size: 15px;
             height: 28px;
-            padding: 4px 10px;
+            padding: 0 10px;
             box-shadow: 0 2px 10px #ceccca;
 
             &:hover {
@@ -120,10 +121,10 @@
             width: 285px;
             // border: solid 1px blue;
 
-            div:not(.dollar-sign) {
+            .donate-amount {
                 width: 62px;
                 display: inline-block;
-                padding: 5px 0 0 0;
+                padding: 0;
                 text-align: center;
                 margin-right: 5px;
             }
