--- a/layouts/partials/donate-form_monthly.html
+++ b/layouts/partials/donate-form_monthly.html
@@ -1,11 +1,11 @@
 <div class="donate_form">
         <form class="monthly">
-            <div>$&#8202; 5 / month</div>
-            <div>$&#8202;10 / month</div>
-            <div class="donate-focus">&#8202;$25 / month</div>
-            <div>&#8202;$50 / month</div>
-            <div>&#8202;$100 / month</div>
+            <button class="donate-amount">$&#8202; 5 / month</button>
+            <button class="donate-amount">$&#8202;10 / month</button>
+            <button class="donate-amount donate-focus">&#8202;$25 / month</button>
+            <button class="donate-amount">&#8202;$50 / month</button>
+            <button class="donate-amount">&#8202;$100 / month</button>
             <div class="dollar-sign">&#8202;$</div><input placeholder="other monthly amount"> 
-            <button>pay with card</button>                                              
+            <button type="submit">pay with card</button>                                              
         </form> 
-</div>
+    </div>
